# template-django

./: .env.example  Makefile  README.md  dms.code-workspace  entrypoint.sh  pyproject.toml
config/: env.py  urls.py
config/django/: base.py
config/settings/: celery.py  files_and_storages.py  logging.py
config/settings/debug_toolbar/: setup.py
core/api/: renderers.py
requirements/: base.txt
